k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poizon-market
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: poizon-market
