k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poizon-market
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - poizon-market.com
      secretName: poizon-market-tls
  rules:
    - host: poizon-market.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poizon-market
                port:
                  number: 80
